# 8085-Emulator

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  asset-manifest.json  build.rs  index.html  package-lock.json  package.json  todo.md
8085-wasm/: Cargo.toml  LICENSE_MIT  build-wasm.sh  index.html
8085-wasm/src/: lib.rs
docs/: asset-manifest.json  index.html
docs/static/css/: main.08d06a35.css  main.08d06a35.css.map  main.5726ad75.css  main.5726ad75.css.map  main.a11b705f.css
docs/static/js/: main.57885094.js  main.7d302f54.js  main.95b2c470.js  main.9dbea4c4.js  main.e4e4a7c2.js  main.ebb09585.js
docs/static/media/: wasm_8085_bg.2240440179968393b4e5.wasm  wasm_8085_bg.61cdcb48da832e5c57f5.wasm  wasm_8085_bg.f3ea32749ed4d077ebe6.wasm
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/: flags.tsx  style.css
frontend/src/components/Editor/: editor.tsx  editor_style.css
frontend/src/components/Flags/: flags.tsx  (+1 more)
frontend/src/monaco/: languageDefinition.tsx
frontend/src/solved/: solved.tsx
frontend/src/utils/: converter.tsx  log.css  log.tsx
notes/: 8085Manual.md  parsers.md
notes/assets/: operand  sybmolic
src/: core.rs  disassember.rs  emulator.rs  lib.rs  main.rs  utils.rs
src/assembler/: assembly.lalrpop  assembly.rs  ast.rs  mod.rs  utils.rs
static/css/: main.555faea5.css  main.555faea5.css.map  main.a11b705f.css.map
static/js/: main.21435ebf.js  main.c1aea6d5.js  main.c1aea6d5.js.LICENSE.txt
static/media/: wasm_8085_bg.80a534865e5d6bb3feb5.wasm
(+9 files in other folders)
